assets/css/styles.css
:root {
    --light-pink: #e6dedd;
    --dark-contrast: #4a4a4a;
}

main {
    text-align: center;
}

.header {
    display: flex;
    justify-content: center;
    background-color: var(--light-pink);
}

.app-title {
    display: flex;
    flex-direction: column;
    text-align: right;
    margin: 20px;
}

.app-title h1 {
    color: #8a0f0f;
}

#and {
    color: #c22828;
}

#james-bond {
    flex-direction: right;
}

#drink-img {
    max-height: 445px;
    max-width: 80%;
}

input {
    accent-color: var(--light-pink);
}

#check-here a {
    color: white;
}

#check-here a:hover {
    color: #8a0f0f
}

#favorites-box {
    background-color: var(--light-pink);
}

#favorite-cocktails {
    background-color: var(--light-pink);
}

#favorite-cocktails a {
    display: block;
}

.kb-rounded {
    border-radius: 15px;
    border: 3px solid var(--light-pink);
}

.detail-container {
    border-radius: 15px;
    border: 3px solid var(--light-pink);
    background-color: var(--light-pink);
    color: var(--dark-contrast);
}

